ProyectoLenguaje/1 - AnalizadorLexico/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    AND
    COMMENT
    ENDIF
    GOSUB
    LOOP
    NEXT
    NOT
    OR
    POWER
    SUBEND

Grammar

Rule 0     S' -> START
Rule 1     START -> PROGRAM V P S PEND
Rule 2     V -> DIM ID AS VARTYPE V
Rule 3     V -> LET ID EQUAL VAR V S
Rule 4     V -> EMPTY
Rule 5     P -> SUBPROCEDURE LPAREN ID RPAREN V P S END
Rule 6     P -> IN LPAREN NUMTYPE RPAREN S
Rule 7     P -> PRINT LPAREN NUMTYPE RPAREN S
Rule 8     P -> EMPTY
Rule 9     S -> IF LPAREN RELEXPR RPAREN THEN S IFELSE END S
Rule 10    IFELSE -> ELSE THEN S
Rule 11    IFELSE -> <empty>
Rule 12    S -> WHILE LPAREN RELEXPR RPAREN S WEND S
Rule 13    S -> DO COLON S WHILE LPAREN RELEXPR RPAREN S
Rule 14    S -> FOR LPAREN RELEXPR COMMA RELEXPR RPAREN S
Rule 15    S -> E
Rule 16    S -> EMPTY
Rule 17    VARTYPE -> INT
Rule 18    VARTYPE -> FLOAT
Rule 19    VARTYPE -> VECDEF
Rule 20    VARTYPE -> MATDEF
Rule 21    NUMTYPE -> ID
Rule 22    NUMTYPE -> NINT
Rule 23    NUMTYPE -> NFLOAT
Rule 24    VAR -> NINT
Rule 25    VAR -> NFLOAT
Rule 26    VAR -> VECTOR
Rule 27    VAR -> MATRIX
Rule 28    VAR -> ID
Rule 29    VECDEF -> VEC LBRACK VAR RBRACK
Rule 30    MATDEF -> MAT LBRACK VAR RBRACK LBRACK VAR RBRACK
Rule 31    VECTOR -> ID LBRACK NUMTYPE RBRACK
Rule 32    MATRIX -> ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK
Rule 33    RELEXPR -> VAR LT VAR
Rule 34    RELEXPR -> VAR LE VAR
Rule 35    RELEXPR -> VAR GT VAR
Rule 36    RELEXPR -> VAR GE VAR
Rule 37    RELEXPR -> VAR EQ VAR
Rule 38    RELEXPR -> VAR NE VAR
Rule 39    E -> E PLUS T
Rule 40    E -> E MINUS T
Rule 41    E -> T
Rule 42    T -> T MULT F
Rule 43    T -> T DIV F
Rule 44    T -> F
Rule 45    F -> LPAREN E RPAREN
Rule 46    F -> NINT
Rule 47    F -> NFLOAT
Rule 48    F -> VECTOR
Rule 49    F -> MATRIX
Rule 50    F -> ID
Rule 51    EMPTY -> <empty>

Terminals, with rules where they appear

AND                  : 
AS                   : 2
COLON                : 13
COMMA                : 14 32
COMMENT              : 
DIM                  : 2
DIV                  : 43
DO                   : 13
ELSE                 : 10
END                  : 5 9
ENDIF                : 
EQ                   : 37
EQUAL                : 3
FLOAT                : 18
FOR                  : 14
GE                   : 36
GOSUB                : 
GT                   : 35
ID                   : 2 3 5 21 28 31 32 50
IF                   : 9
IN                   : 6
INT                  : 17
LBRACK               : 29 30 30 31 32
LE                   : 34
LET                  : 3
LOOP                 : 
LPAREN               : 5 6 7 9 12 13 14 45
LT                   : 33
MAT                  : 30
MINUS                : 40
MULT                 : 42
NE                   : 38
NEXT                 : 
NFLOAT               : 23 25 47
NINT                 : 22 24 46
NOT                  : 
OR                   : 
PEND                 : 1
PLUS                 : 39
POWER                : 
PRINT                : 7
PROGRAM              : 1
RBRACK               : 29 30 30 31 32
RPAREN               : 5 6 7 9 12 13 14 45
SUBEND               : 
SUBPROCEDURE         : 5
THEN                 : 9 10
VEC                  : 29
WEND                 : 12
WHILE                : 12 13
error                : 

Nonterminals, with rules where they appear

E                    : 15 39 40 45
EMPTY                : 4 8 16
F                    : 42 43 44
IFELSE               : 9
MATDEF               : 20
MATRIX               : 27 49
NUMTYPE              : 6 7 31 32 32
P                    : 1 5
RELEXPR              : 9 12 13 14 14
S                    : 1 3 5 6 7 9 9 10 12 12 13 13 14
START                : 0
T                    : 39 40 41 42 43
V                    : 1 2 3 5
VAR                  : 3 29 30 30 33 33 34 34 35 35 36 36 37 37 38 38
VARTYPE              : 2
VECDEF               : 19
VECTOR               : 26 48

Parsing method: LALR

state 0

    (0) S' -> . START
    (1) START -> . PROGRAM V P S PEND

    PROGRAM         shift and go to state 2

    START                          shift and go to state 1

state 1

    (0) S' -> START .



state 2

    (1) START -> PROGRAM . V P S PEND
    (2) V -> . DIM ID AS VARTYPE V
    (3) V -> . LET ID EQUAL VAR V S
    (4) V -> . EMPTY
    (51) EMPTY -> .

    DIM             shift and go to state 4
    LET             shift and go to state 5
    SUBPROCEDURE    reduce using rule 51 (EMPTY -> .)
    IN              reduce using rule 51 (EMPTY -> .)
    PRINT           reduce using rule 51 (EMPTY -> .)
    IF              reduce using rule 51 (EMPTY -> .)
    WHILE           reduce using rule 51 (EMPTY -> .)
    DO              reduce using rule 51 (EMPTY -> .)
    FOR             reduce using rule 51 (EMPTY -> .)
    LPAREN          reduce using rule 51 (EMPTY -> .)
    NINT            reduce using rule 51 (EMPTY -> .)
    NFLOAT          reduce using rule 51 (EMPTY -> .)
    ID              reduce using rule 51 (EMPTY -> .)
    PEND            reduce using rule 51 (EMPTY -> .)

    V                              shift and go to state 3
    EMPTY                          shift and go to state 6

state 3

    (1) START -> PROGRAM V . P S PEND
    (5) P -> . SUBPROCEDURE LPAREN ID RPAREN V P S END
    (6) P -> . IN LPAREN NUMTYPE RPAREN S
    (7) P -> . PRINT LPAREN NUMTYPE RPAREN S
    (8) P -> . EMPTY
    (51) EMPTY -> .

    SUBPROCEDURE    shift and go to state 8
    IN              shift and go to state 9
    PRINT           shift and go to state 10
    IF              reduce using rule 51 (EMPTY -> .)
    WHILE           reduce using rule 51 (EMPTY -> .)
    DO              reduce using rule 51 (EMPTY -> .)
    FOR             reduce using rule 51 (EMPTY -> .)
    LPAREN          reduce using rule 51 (EMPTY -> .)
    NINT            reduce using rule 51 (EMPTY -> .)
    NFLOAT          reduce using rule 51 (EMPTY -> .)
    ID              reduce using rule 51 (EMPTY -> .)
    PEND            reduce using rule 51 (EMPTY -> .)

    P                              shift and go to state 7
    EMPTY                          shift and go to state 11

state 4

    (2) V -> DIM . ID AS VARTYPE V

    ID              shift and go to state 12


state 5

    (3) V -> LET . ID EQUAL VAR V S

    ID              shift and go to state 13


state 6

    (4) V -> EMPTY .

    SUBPROCEDURE    reduce using rule 4 (V -> EMPTY .)
    IN              reduce using rule 4 (V -> EMPTY .)
    PRINT           reduce using rule 4 (V -> EMPTY .)
    IF              reduce using rule 4 (V -> EMPTY .)
    WHILE           reduce using rule 4 (V -> EMPTY .)
    DO              reduce using rule 4 (V -> EMPTY .)
    FOR             reduce using rule 4 (V -> EMPTY .)
    LPAREN          reduce using rule 4 (V -> EMPTY .)
    NINT            reduce using rule 4 (V -> EMPTY .)
    NFLOAT          reduce using rule 4 (V -> EMPTY .)
    ID              reduce using rule 4 (V -> EMPTY .)
    PEND            reduce using rule 4 (V -> EMPTY .)
    END             reduce using rule 4 (V -> EMPTY .)


state 7

    (1) START -> PROGRAM V P . S PEND
    (9) S -> . IF LPAREN RELEXPR RPAREN THEN S IFELSE END S
    (12) S -> . WHILE LPAREN RELEXPR RPAREN S WEND S
    (13) S -> . DO COLON S WHILE LPAREN RELEXPR RPAREN S
    (14) S -> . FOR LPAREN RELEXPR COMMA RELEXPR RPAREN S
    (15) S -> . E
    (16) S -> . EMPTY
    (39) E -> . E PLUS T
    (40) E -> . E MINUS T
    (41) E -> . T
    (51) EMPTY -> .
    (42) T -> . T MULT F
    (43) T -> . T DIV F
    (44) T -> . F
    (45) F -> . LPAREN E RPAREN
    (46) F -> . NINT
    (47) F -> . NFLOAT
    (48) F -> . VECTOR
    (49) F -> . MATRIX
    (50) F -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    IF              shift and go to state 15
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    PEND            reduce using rule 51 (EMPTY -> .)
    LPAREN          shift and go to state 16
    NINT            shift and go to state 24
    NFLOAT          shift and go to state 25
    ID              shift and go to state 28

    S                              shift and go to state 14
    E                              shift and go to state 20
    EMPTY                          shift and go to state 21
    T                              shift and go to state 22
    F                              shift and go to state 23
    VECTOR                         shift and go to state 26
    MATRIX                         shift and go to state 27

state 8

    (5) P -> SUBPROCEDURE . LPAREN ID RPAREN V P S END

    LPAREN          shift and go to state 29


state 9

    (6) P -> IN . LPAREN NUMTYPE RPAREN S

    LPAREN          shift and go to state 30


state 10

    (7) P -> PRINT . LPAREN NUMTYPE RPAREN S

    LPAREN          shift and go to state 31


state 11

    (8) P -> EMPTY .

    IF              reduce using rule 8 (P -> EMPTY .)
    WHILE           reduce using rule 8 (P -> EMPTY .)
    DO              reduce using rule 8 (P -> EMPTY .)
    FOR             reduce using rule 8 (P -> EMPTY .)
    LPAREN          reduce using rule 8 (P -> EMPTY .)
    NINT            reduce using rule 8 (P -> EMPTY .)
    NFLOAT          reduce using rule 8 (P -> EMPTY .)
    ID              reduce using rule 8 (P -> EMPTY .)
    PEND            reduce using rule 8 (P -> EMPTY .)
    END             reduce using rule 8 (P -> EMPTY .)


state 12

    (2) V -> DIM ID . AS VARTYPE V

    AS              shift and go to state 32


state 13

    (3) V -> LET ID . EQUAL VAR V S

    EQUAL           shift and go to state 33


state 14

    (1) START -> PROGRAM V P S . PEND

    PEND            shift and go to state 34


state 15

    (9) S -> IF . LPAREN RELEXPR RPAREN THEN S IFELSE END S

    LPAREN          shift and go to state 35


state 16

    (45) F -> LPAREN . E RPAREN
    (39) E -> . E PLUS T
    (40) E -> . E MINUS T
    (41) E -> . T
    (42) T -> . T MULT F
    (43) T -> . T DIV F
    (44) T -> . F
    (45) F -> . LPAREN E RPAREN
    (46) F -> . NINT
    (47) F -> . NFLOAT
    (48) F -> . VECTOR
    (49) F -> . MATRIX
    (50) F -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    LPAREN          shift and go to state 16
    NINT            shift and go to state 24
    NFLOAT          shift and go to state 25
    ID              shift and go to state 28

    E                              shift and go to state 36
    T                              shift and go to state 22
    F                              shift and go to state 23
    VECTOR                         shift and go to state 26
    MATRIX                         shift and go to state 27

state 17

    (12) S -> WHILE . LPAREN RELEXPR RPAREN S WEND S

    LPAREN          shift and go to state 37


state 18

    (13) S -> DO . COLON S WHILE LPAREN RELEXPR RPAREN S

    COLON           shift and go to state 38


state 19

    (14) S -> FOR . LPAREN RELEXPR COMMA RELEXPR RPAREN S

    LPAREN          shift and go to state 39


state 20

    (15) S -> E .
    (39) E -> E . PLUS T
    (40) E -> E . MINUS T

    PEND            reduce using rule 15 (S -> E .)
    WHILE           reduce using rule 15 (S -> E .)
    IF              reduce using rule 15 (S -> E .)
    DO              reduce using rule 15 (S -> E .)
    FOR             reduce using rule 15 (S -> E .)
    LPAREN          reduce using rule 15 (S -> E .)
    NINT            reduce using rule 15 (S -> E .)
    NFLOAT          reduce using rule 15 (S -> E .)
    ID              reduce using rule 15 (S -> E .)
    END             reduce using rule 15 (S -> E .)
    SUBPROCEDURE    reduce using rule 15 (S -> E .)
    IN              reduce using rule 15 (S -> E .)
    PRINT           reduce using rule 15 (S -> E .)
    WEND            reduce using rule 15 (S -> E .)
    ELSE            reduce using rule 15 (S -> E .)
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 21

    (16) S -> EMPTY .

    PEND            reduce using rule 16 (S -> EMPTY .)
    WHILE           reduce using rule 16 (S -> EMPTY .)
    IF              reduce using rule 16 (S -> EMPTY .)
    DO              reduce using rule 16 (S -> EMPTY .)
    FOR             reduce using rule 16 (S -> EMPTY .)
    LPAREN          reduce using rule 16 (S -> EMPTY .)
    NINT            reduce using rule 16 (S -> EMPTY .)
    NFLOAT          reduce using rule 16 (S -> EMPTY .)
    ID              reduce using rule 16 (S -> EMPTY .)
    END             reduce using rule 16 (S -> EMPTY .)
    SUBPROCEDURE    reduce using rule 16 (S -> EMPTY .)
    IN              reduce using rule 16 (S -> EMPTY .)
    PRINT           reduce using rule 16 (S -> EMPTY .)
    WEND            reduce using rule 16 (S -> EMPTY .)
    ELSE            reduce using rule 16 (S -> EMPTY .)


state 22

    (41) E -> T .
    (42) T -> T . MULT F
    (43) T -> T . DIV F

    PLUS            reduce using rule 41 (E -> T .)
    MINUS           reduce using rule 41 (E -> T .)
    PEND            reduce using rule 41 (E -> T .)
    RPAREN          reduce using rule 41 (E -> T .)
    WHILE           reduce using rule 41 (E -> T .)
    IF              reduce using rule 41 (E -> T .)
    DO              reduce using rule 41 (E -> T .)
    FOR             reduce using rule 41 (E -> T .)
    LPAREN          reduce using rule 41 (E -> T .)
    NINT            reduce using rule 41 (E -> T .)
    NFLOAT          reduce using rule 41 (E -> T .)
    ID              reduce using rule 41 (E -> T .)
    END             reduce using rule 41 (E -> T .)
    SUBPROCEDURE    reduce using rule 41 (E -> T .)
    IN              reduce using rule 41 (E -> T .)
    PRINT           reduce using rule 41 (E -> T .)
    WEND            reduce using rule 41 (E -> T .)
    ELSE            reduce using rule 41 (E -> T .)
    MULT            shift and go to state 42
    DIV             shift and go to state 43


state 23

    (44) T -> F .

    MULT            reduce using rule 44 (T -> F .)
    DIV             reduce using rule 44 (T -> F .)
    PLUS            reduce using rule 44 (T -> F .)
    MINUS           reduce using rule 44 (T -> F .)
    PEND            reduce using rule 44 (T -> F .)
    RPAREN          reduce using rule 44 (T -> F .)
    WHILE           reduce using rule 44 (T -> F .)
    IF              reduce using rule 44 (T -> F .)
    DO              reduce using rule 44 (T -> F .)
    FOR             reduce using rule 44 (T -> F .)
    LPAREN          reduce using rule 44 (T -> F .)
    NINT            reduce using rule 44 (T -> F .)
    NFLOAT          reduce using rule 44 (T -> F .)
    ID              reduce using rule 44 (T -> F .)
    END             reduce using rule 44 (T -> F .)
    SUBPROCEDURE    reduce using rule 44 (T -> F .)
    IN              reduce using rule 44 (T -> F .)
    PRINT           reduce using rule 44 (T -> F .)
    WEND            reduce using rule 44 (T -> F .)
    ELSE            reduce using rule 44 (T -> F .)


state 24

    (46) F -> NINT .

    MULT            reduce using rule 46 (F -> NINT .)
    DIV             reduce using rule 46 (F -> NINT .)
    PLUS            reduce using rule 46 (F -> NINT .)
    MINUS           reduce using rule 46 (F -> NINT .)
    PEND            reduce using rule 46 (F -> NINT .)
    RPAREN          reduce using rule 46 (F -> NINT .)
    WHILE           reduce using rule 46 (F -> NINT .)
    IF              reduce using rule 46 (F -> NINT .)
    DO              reduce using rule 46 (F -> NINT .)
    FOR             reduce using rule 46 (F -> NINT .)
    LPAREN          reduce using rule 46 (F -> NINT .)
    NINT            reduce using rule 46 (F -> NINT .)
    NFLOAT          reduce using rule 46 (F -> NINT .)
    ID              reduce using rule 46 (F -> NINT .)
    END             reduce using rule 46 (F -> NINT .)
    SUBPROCEDURE    reduce using rule 46 (F -> NINT .)
    IN              reduce using rule 46 (F -> NINT .)
    PRINT           reduce using rule 46 (F -> NINT .)
    WEND            reduce using rule 46 (F -> NINT .)
    ELSE            reduce using rule 46 (F -> NINT .)


state 25

    (47) F -> NFLOAT .

    MULT            reduce using rule 47 (F -> NFLOAT .)
    DIV             reduce using rule 47 (F -> NFLOAT .)
    PLUS            reduce using rule 47 (F -> NFLOAT .)
    MINUS           reduce using rule 47 (F -> NFLOAT .)
    PEND            reduce using rule 47 (F -> NFLOAT .)
    RPAREN          reduce using rule 47 (F -> NFLOAT .)
    WHILE           reduce using rule 47 (F -> NFLOAT .)
    IF              reduce using rule 47 (F -> NFLOAT .)
    DO              reduce using rule 47 (F -> NFLOAT .)
    FOR             reduce using rule 47 (F -> NFLOAT .)
    LPAREN          reduce using rule 47 (F -> NFLOAT .)
    NINT            reduce using rule 47 (F -> NFLOAT .)
    NFLOAT          reduce using rule 47 (F -> NFLOAT .)
    ID              reduce using rule 47 (F -> NFLOAT .)
    END             reduce using rule 47 (F -> NFLOAT .)
    SUBPROCEDURE    reduce using rule 47 (F -> NFLOAT .)
    IN              reduce using rule 47 (F -> NFLOAT .)
    PRINT           reduce using rule 47 (F -> NFLOAT .)
    WEND            reduce using rule 47 (F -> NFLOAT .)
    ELSE            reduce using rule 47 (F -> NFLOAT .)


state 26

    (48) F -> VECTOR .

    MULT            reduce using rule 48 (F -> VECTOR .)
    DIV             reduce using rule 48 (F -> VECTOR .)
    PLUS            reduce using rule 48 (F -> VECTOR .)
    MINUS           reduce using rule 48 (F -> VECTOR .)
    PEND            reduce using rule 48 (F -> VECTOR .)
    RPAREN          reduce using rule 48 (F -> VECTOR .)
    WHILE           reduce using rule 48 (F -> VECTOR .)
    IF              reduce using rule 48 (F -> VECTOR .)
    DO              reduce using rule 48 (F -> VECTOR .)
    FOR             reduce using rule 48 (F -> VECTOR .)
    LPAREN          reduce using rule 48 (F -> VECTOR .)
    NINT            reduce using rule 48 (F -> VECTOR .)
    NFLOAT          reduce using rule 48 (F -> VECTOR .)
    ID              reduce using rule 48 (F -> VECTOR .)
    END             reduce using rule 48 (F -> VECTOR .)
    SUBPROCEDURE    reduce using rule 48 (F -> VECTOR .)
    IN              reduce using rule 48 (F -> VECTOR .)
    PRINT           reduce using rule 48 (F -> VECTOR .)
    WEND            reduce using rule 48 (F -> VECTOR .)
    ELSE            reduce using rule 48 (F -> VECTOR .)


state 27

    (49) F -> MATRIX .

    MULT            reduce using rule 49 (F -> MATRIX .)
    DIV             reduce using rule 49 (F -> MATRIX .)
    PLUS            reduce using rule 49 (F -> MATRIX .)
    MINUS           reduce using rule 49 (F -> MATRIX .)
    PEND            reduce using rule 49 (F -> MATRIX .)
    RPAREN          reduce using rule 49 (F -> MATRIX .)
    WHILE           reduce using rule 49 (F -> MATRIX .)
    IF              reduce using rule 49 (F -> MATRIX .)
    DO              reduce using rule 49 (F -> MATRIX .)
    FOR             reduce using rule 49 (F -> MATRIX .)
    LPAREN          reduce using rule 49 (F -> MATRIX .)
    NINT            reduce using rule 49 (F -> MATRIX .)
    NFLOAT          reduce using rule 49 (F -> MATRIX .)
    ID              reduce using rule 49 (F -> MATRIX .)
    END             reduce using rule 49 (F -> MATRIX .)
    SUBPROCEDURE    reduce using rule 49 (F -> MATRIX .)
    IN              reduce using rule 49 (F -> MATRIX .)
    PRINT           reduce using rule 49 (F -> MATRIX .)
    WEND            reduce using rule 49 (F -> MATRIX .)
    ELSE            reduce using rule 49 (F -> MATRIX .)


state 28

    (50) F -> ID .
    (31) VECTOR -> ID . LBRACK NUMTYPE RBRACK
    (32) MATRIX -> ID . LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    MULT            reduce using rule 50 (F -> ID .)
    DIV             reduce using rule 50 (F -> ID .)
    PLUS            reduce using rule 50 (F -> ID .)
    MINUS           reduce using rule 50 (F -> ID .)
    PEND            reduce using rule 50 (F -> ID .)
    RPAREN          reduce using rule 50 (F -> ID .)
    WHILE           reduce using rule 50 (F -> ID .)
    IF              reduce using rule 50 (F -> ID .)
    DO              reduce using rule 50 (F -> ID .)
    FOR             reduce using rule 50 (F -> ID .)
    LPAREN          reduce using rule 50 (F -> ID .)
    NINT            reduce using rule 50 (F -> ID .)
    NFLOAT          reduce using rule 50 (F -> ID .)
    ID              reduce using rule 50 (F -> ID .)
    END             reduce using rule 50 (F -> ID .)
    SUBPROCEDURE    reduce using rule 50 (F -> ID .)
    IN              reduce using rule 50 (F -> ID .)
    PRINT           reduce using rule 50 (F -> ID .)
    WEND            reduce using rule 50 (F -> ID .)
    ELSE            reduce using rule 50 (F -> ID .)
    LBRACK          shift and go to state 44


state 29

    (5) P -> SUBPROCEDURE LPAREN . ID RPAREN V P S END

    ID              shift and go to state 45


state 30

    (6) P -> IN LPAREN . NUMTYPE RPAREN S
    (21) NUMTYPE -> . ID
    (22) NUMTYPE -> . NINT
    (23) NUMTYPE -> . NFLOAT

    ID              shift and go to state 47
    NINT            shift and go to state 48
    NFLOAT          shift and go to state 49

    NUMTYPE                        shift and go to state 46

state 31

    (7) P -> PRINT LPAREN . NUMTYPE RPAREN S
    (21) NUMTYPE -> . ID
    (22) NUMTYPE -> . NINT
    (23) NUMTYPE -> . NFLOAT

    ID              shift and go to state 47
    NINT            shift and go to state 48
    NFLOAT          shift and go to state 49

    NUMTYPE                        shift and go to state 50

state 32

    (2) V -> DIM ID AS . VARTYPE V
    (17) VARTYPE -> . INT
    (18) VARTYPE -> . FLOAT
    (19) VARTYPE -> . VECDEF
    (20) VARTYPE -> . MATDEF
    (29) VECDEF -> . VEC LBRACK VAR RBRACK
    (30) MATDEF -> . MAT LBRACK VAR RBRACK LBRACK VAR RBRACK

    INT             shift and go to state 52
    FLOAT           shift and go to state 53
    VEC             shift and go to state 56
    MAT             shift and go to state 57

    VARTYPE                        shift and go to state 51
    VECDEF                         shift and go to state 54
    MATDEF                         shift and go to state 55

state 33

    (3) V -> LET ID EQUAL . VAR V S
    (24) VAR -> . NINT
    (25) VAR -> . NFLOAT
    (26) VAR -> . VECTOR
    (27) VAR -> . MATRIX
    (28) VAR -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    NINT            shift and go to state 60
    NFLOAT          shift and go to state 61
    ID              shift and go to state 58

    VAR                            shift and go to state 59
    VECTOR                         shift and go to state 62
    MATRIX                         shift and go to state 63

state 34

    (1) START -> PROGRAM V P S PEND .

    $end            reduce using rule 1 (START -> PROGRAM V P S PEND .)


state 35

    (9) S -> IF LPAREN . RELEXPR RPAREN THEN S IFELSE END S
    (33) RELEXPR -> . VAR LT VAR
    (34) RELEXPR -> . VAR LE VAR
    (35) RELEXPR -> . VAR GT VAR
    (36) RELEXPR -> . VAR GE VAR
    (37) RELEXPR -> . VAR EQ VAR
    (38) RELEXPR -> . VAR NE VAR
    (24) VAR -> . NINT
    (25) VAR -> . NFLOAT
    (26) VAR -> . VECTOR
    (27) VAR -> . MATRIX
    (28) VAR -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    NINT            shift and go to state 60
    NFLOAT          shift and go to state 61
    ID              shift and go to state 58

    RELEXPR                        shift and go to state 64
    VAR                            shift and go to state 65
    VECTOR                         shift and go to state 62
    MATRIX                         shift and go to state 63

state 36

    (45) F -> LPAREN E . RPAREN
    (39) E -> E . PLUS T
    (40) E -> E . MINUS T

    RPAREN          shift and go to state 66
    PLUS            shift and go to state 40
    MINUS           shift and go to state 41


state 37

    (12) S -> WHILE LPAREN . RELEXPR RPAREN S WEND S
    (33) RELEXPR -> . VAR LT VAR
    (34) RELEXPR -> . VAR LE VAR
    (35) RELEXPR -> . VAR GT VAR
    (36) RELEXPR -> . VAR GE VAR
    (37) RELEXPR -> . VAR EQ VAR
    (38) RELEXPR -> . VAR NE VAR
    (24) VAR -> . NINT
    (25) VAR -> . NFLOAT
    (26) VAR -> . VECTOR
    (27) VAR -> . MATRIX
    (28) VAR -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    NINT            shift and go to state 60
    NFLOAT          shift and go to state 61
    ID              shift and go to state 58

    RELEXPR                        shift and go to state 67
    VAR                            shift and go to state 65
    VECTOR                         shift and go to state 62
    MATRIX                         shift and go to state 63

state 38

    (13) S -> DO COLON . S WHILE LPAREN RELEXPR RPAREN S
    (9) S -> . IF LPAREN RELEXPR RPAREN THEN S IFELSE END S
    (12) S -> . WHILE LPAREN RELEXPR RPAREN S WEND S
    (13) S -> . DO COLON S WHILE LPAREN RELEXPR RPAREN S
    (14) S -> . FOR LPAREN RELEXPR COMMA RELEXPR RPAREN S
    (15) S -> . E
    (16) S -> . EMPTY
    (39) E -> . E PLUS T
    (40) E -> . E MINUS T
    (41) E -> . T
    (51) EMPTY -> .
    (42) T -> . T MULT F
    (43) T -> . T DIV F
    (44) T -> . F
    (45) F -> . LPAREN E RPAREN
    (46) F -> . NINT
    (47) F -> . NFLOAT
    (48) F -> . VECTOR
    (49) F -> . MATRIX
    (50) F -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

  ! shift/reduce conflict for WHILE resolved as shift
    IF              shift and go to state 15
    WHILE           shift and go to state 17
    DO              shift and go to state 18
    FOR             shift and go to state 19
    LPAREN          shift and go to state 16
    NINT            shift and go to state 24
    NFLOAT          shift and go to state 25
    ID              shift and go to state 28

  ! WHILE           [ reduce using rule 51 (EMPTY -> .) ]

    S                              shift and go to state 68
    E                              shift and go to state 20
    EMPTY                          shift and go to state 21
    T                              shift and go to state 22
    F                              shift and go to state 23
    VECTOR                         shift and go to state 26
    MATRIX                         shift and go to state 27

state 39

    (14) S -> FOR LPAREN . RELEXPR COMMA RELEXPR RPAREN S
    (33) RELEXPR -> . VAR LT VAR
    (34) RELEXPR -> . VAR LE VAR
    (35) RELEXPR -> . VAR GT VAR
    (36) RELEXPR -> . VAR GE VAR
    (37) RELEXPR -> . VAR EQ VAR
    (38) RELEXPR -> . VAR NE VAR
    (24) VAR -> . NINT
    (25) VAR -> . NFLOAT
    (26) VAR -> . VECTOR
    (27) VAR -> . MATRIX
    (28) VAR -> . ID
    (31) VECTOR -> . ID LBRACK NUMTYPE RBRACK
    (32) MATRIX -> . ID LBRACK NUMTYPE COMMA NUMTYPE RBRACK

    NINT            shift and go to state 60
    NFLOAT          shift and go to state 61
    ID              shift and go to state 58

